--- a/U.N.OWEN/Assembly-CSharp-Editor.csproj
+++ b/U.N.OWEN/Assembly-CSharp-Editor.csproj
@@ -2,6 +2,8 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
+    <CscToolPath>C:\Program Files\Unity\Hub\Editor\2019.2.6f1\Editor\Data\Tools\RoslynScripts</CscToolPath>
+    <CscToolExe>unity_csc.bat</CscToolExe>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -51,9 +53,6 @@
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>2019.2.6f1</UnityVersion>
   </PropertyGroup>
-  <ItemGroup>
-    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
-  </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2019.2.6f1\Editor\Data\Managed/UnityEngine/UnityEngine.dll</HintPath>
@@ -107,78 +106,70 @@
     <Compile Include="Assets\Other Assets\Cinemachine\PostFX\Editor\PostFXAutoImport.cs" />
     <Compile Include="Assets\Other Assets\Cinemachine\Timeline\Editor\CinemachineShotEditor.cs" />
     <Reference Include="UnityEditor.TestRunner">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/UnityEditor.TestRunner.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/UnityEditor.TestRunner.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.TestRunner">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/UnityEngine.TestRunner.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/UnityEngine.TestRunner.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-<<<<<<< HEAD
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
-=======
       <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
->>>>>>> 16f451319dc4d972a399f50302aa20ac201560c5
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Runtime">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Lightweight.Runtime">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Lightweight.Runtime.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Lightweight.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Lightweight.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Lightweight.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Lightweight.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Postprocessing.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Postprocessing.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Postprocessing.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Sprite.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Postprocessing.Runtime">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Postprocessing.Runtime.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Postprocessing.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Tilemap.Editor">
-<<<<<<< HEAD
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
-=======
       <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
->>>>>>> 16f451319dc4d972a399f50302aa20ac201560c5
     </Reference>
     <Reference Include="Unity.ShaderGraph.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.ShaderGraph.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.ShaderGraph.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.2.6f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -376,10 +367,10 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.2.6f1/Editor/Data/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
-      <HintPath>C:/Program Files (x86)/Microsoft Visual Studio Tools for Unity/16.0/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
+      <HintPath>C:/Program Files (x86)/Microsoft Visual Studio Tools for Unity/15.0/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/PackageCache/com.unity.ext.nunit@1.0.0/net35/unity-custom/nunit.framework.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/PackageCache/com.unity.ext.nunit@1.0.0/net35/unity-custom/nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.iOS.Extensions.Xcode">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.2.6f1/Editor/Data/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
