--- a/U.N.OWEN/Assembly-CSharp.csproj
+++ b/U.N.OWEN/Assembly-CSharp.csproj
@@ -117,9 +117,11 @@
     <Compile Include="Assets\Other Assets\Cinemachine\Timeline\CinemachineTrack.cs" />
     <Compile Include="Assets\Scripts\AreaEntrance.cs" />
     <Compile Include="Assets\Scripts\AreaExit.cs" />
+    <Compile Include="Assets\Scripts\Bullet.cs" />
     <Compile Include="Assets\Scripts\Dialogue.cs" />
     <Compile Include="Assets\Scripts\FindPlayer.cs" />
     <Compile Include="Assets\Scripts\MeleeEnemy.cs" />
+    <Compile Include="Assets\Scripts\NPC.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\PlayerLoader.cs" />
@@ -155,19 +157,19 @@
       <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Runtime">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Lightweight.Runtime">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Lightweight.Runtime.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Lightweight.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Lightweight.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Lightweight.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Lightweight.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
@@ -179,28 +181,28 @@
       <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Postprocessing.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Postprocessing.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Postprocessing.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
       <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Sprite.Editor">
       <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Postprocessing.Runtime">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Postprocessing.Runtime.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.Postprocessing.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Tilemap.Editor">
       <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ShaderGraph.Editor">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.ShaderGraph.Editor.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.ShaderGraph.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
-      <HintPath>C:/Users/wjhwj/Documents/GitHub/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
+      <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
       <HintPath>C:/Users/tieuc/Github/GI-Game-Jam-2019/U.N.OWEN/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
